# tuna-man

./: .gitignore  Cargo.toml  README.md  data.csv  data.csv.bak  football-teams.csv
.github/workflows/: rust.yml
src/: args.rs  main.rs  tournament.rs  ui.rs
src/tournament/: backend.rs  format.rs  players.rs  structs.rs  tests.rs
src/tournament/format/: double_elemination.rs  double_elimination.rs  round_robin.rs  single_elemination.rs  single_elimination.rs  swiss_system.rs
src/tournament/players/: tests.rs
