[package]
name = "tuna-man"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "No-bullshit, lightweight, Tournament Manager with a cli."
# documentation = "https://docs.rs/tuna-man"
repository = "https://codeberg.org/jark/tuna-man"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.0"
fastrand = "2.1.1"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
